added contact and index pages

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Moz Fruit</title>
+    <title>About Moz Fruit</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Moz Fruit</title>
@@ -11,15 +11,15 @@
   <body>
     <nav class="bg navbar navbar-expand-md border-0" style="background-color: #EDAD2C;">
       <div class="container-fluid">
-          <a class="navbar-brand" style="color: #FFFFFF;" href="index.html"><img class="w-25"/><b>🥭 Moz Fruit</b></a>
+          <a class="navbar-brand" style="color: #FFFFFF;" href="index.html"><img class="w-25"/>🥭 Moz Fruit</a>
                   <ul class="navbar-nav ms-auto mt-2">
                       <li class="nav-item"><a class="nav-link" href="about.html" style="color: #FFFFFF;">About</a></li>
-                      <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #FFFFFF;">Contact</a></li>
+                      <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #FFFFFF;"><b>Contact</b></a></li>
                   </ul>
           </div>
       </div>
   </nav>
-    <h1>Hello, Index Page!</h1>
+    <h1>Hello, Contact Page!</h1>
     <button type="button" class="btn btn-primary">Test bootstrap</btn>
       <Footer class="bg border-0 fixed-bottom p-3 border-0 mx-auto mt-2 w-100" style="background-color: #EDAD2C; text-align : center;">
         <p class="text-align-center mt-2" id="pyfooter" style="text-align:center">JS INVESTIMENTOS</p>
