--- a/index.html
+++ b/index.html
@@ -19,10 +19,79 @@
           </div>
       </div>
   </nav>
-    <h1>Hello, Index Page!</h1>
-    <button type="button" class="btn btn-primary">Test bootstrap</btn>
+  <div class="container mb-5 mt-2">
+    <div class="card fluid center mx-auto w-100">
+      <!--Photo by cottonbro studio: https://www.pexels.com/photo/white-ceramic-mug-on-top-of-a-newspaper-3944425/-->
+      <img src="static/top_secret.jpeg" class="card-img-top" alt="newspaper with mug of black coffee on it">
+      <div class="card-body">
+        <p class="card-text">Text about Moz Fruit - A Chigamane Estate creation</p>
+      </div>
+      <div class="d-grid gap-2 col-2 mx-auto mb-2">
+        <button type="button" class="btn btn-dark">Contact</btn>
+      </div>
+    </div>
+    
+    <div class="card body rounded-2 shadow m-3 pt-2 ps-1 pe-1 border-1 justify-content-center mx-auto w-auto">
+      <h2 class="card-title mx-auto">Gallery:</h5>                
+      <div class="row justify-content-center">
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
+              <div class="card-body">
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="/static/pexels-tae-fuller-1141853.jpg" alt="Golden Gate Bridge with pink clouds over it"/>
+                  <h5 class="card-title"><b>Headline1:</b></h5>
+                    <p>One</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow mx-auto rounded-3" style="width: 16rem;">
+              <div class="card-body">
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="/static/pexels-thisisengineering-3861969.jpg" alt="woman standing infront of projector with code over it"/>
+                  <h5 class="card-title"><b>Headline 2:</b></h5>
+                  <p>Text to go here</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
+              <div class="card-body">
+
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="/static/pexels-frans-van-heerden-631292.jpg" alt="two Rhinos grazing"/>
+                  <h5 class="card-title"><b>Headline 3:</b></h5>
+                  <p>More text</p>
+              </hr>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow rounded-3 mb-3" style="width: 16rem;">
+              <div class="card-body">
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="/static/baobab.png" alt="African Baobab Tree"/>
+                  <h5 class="card-title"><b>Headline 4:</b></h5>
+                <p>More text</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    </div>
+  </div>  
+</div>
+</div>
+</div>
+</br>
+</br>
+</br>
+</br>
       <Footer class="bg border-0 fixed-bottom p-3 border-0 mx-auto mt-2 w-100" style="background-color: #EDAD2C; text-align : center;">
-        <p class="text-align-center mt-2" id="pyfooter" style="text-align:center">JS INVESTIMENTOS</p>
+        <p class="text-align-center mt-2" id="mozfooter" style="text-align:center">JS INVESTIMENTOS</p>
     </Footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
