Added more images

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </nav>
   <div class="container mb-5 mt-2">
     <div class="card fluid center mx-auto w-100">
-      <!--Photo by cottonbro studio: https://www.pexels.com/photo/white-ceramic-mug-on-top-of-a-newspaper-3944425/-->
-      <img src="static/top_secret.jpeg" class="card-img-top" alt="newspaper with mug of black coffee on it">
+      <!--Hero images -->
+      <img src="static/top_secret.jpeg" class="card-img-top" alt="tree with sign top secret garden">
       <div class="card-body">
         <p class="card-text">Text about Moz Fruit - A Chigamane Estate creation</p>
       </div>
@@ -30,17 +30,17 @@
         <button type="button" class="btn btn-dark">Contact</btn>
       </div>
     </div>
-    
+
+    <!-- Here are the images for the gallery  -->
     <div class="card body rounded-2 shadow m-3 pt-2 ps-1 pe-1 border-1 justify-content-center mx-auto w-auto">
       <h2 class="card-title mx-auto">Gallery:</h5>                
       <div class="row justify-content-center">
         <div class="col-auto mb-2">
           <div class="d-flex">
-            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
+            <div class="card shadow rounded-3 mx-auto" style="width: 20rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="/static/pexels-tae-fuller-1141853.jpg" alt="Golden Gate Bridge with pink clouds over it"/>
-                  <h5 class="card-title"><b>Headline1:</b></h5>
-                    <p>One</p>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/dragonfruit.jpg" alt="Box filled with pink dragon fruit"/>
+                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
               </div>
             </div>
           </div>
@@ -49,21 +49,18 @@
           <div class="d-flex">
             <div class="card shadow mx-auto rounded-3" style="width: 16rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="/static/pexels-thisisengineering-3861969.jpg" alt="woman standing infront of projector with code over it"/>
-                  <h5 class="card-title"><b>Headline 2:</b></h5>
-                  <p>Text to go here</p>
-              </div>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/flower.jpg" alt="Box filled with pink dragon fruit"/>
+                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
             </div>
           </div>
+        </div>
         </div>
         <div class="col-auto mb-2">
           <div class="d-flex">
             <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
               <div class="card-body">
-
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="/static/pexels-frans-van-heerden-631292.jpg" alt="two Rhinos grazing"/>
-                  <h5 class="card-title"><b>Headline 3:</b></h5>
-                  <p>More text</p>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/chili.jpg" alt="Box filled with pink dragon fruit"/>
+                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
               </hr>
               </div>
             </div>
@@ -71,11 +68,10 @@
         </div>
         <div class="col-auto mb-2">
           <div class="d-flex">
-            <div class="card shadow rounded-3 mb-3" style="width: 16rem;">
+            <div class="card shadow rounded-3 mb-3 mt-2" style="width: 16rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="/static/baobab.png" alt="African Baobab Tree"/>
-                  <h5 class="card-title"><b>Headline 4:</b></h5>
-                <p>More text</p>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/litchi.jpg" alt="Box filled with pink dragon fruit"/>
+                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
               </div>
             </div>
           </div>
