--- a/index.html
+++ b/index.html
@@ -37,12 +37,22 @@
       <div class="row justify-content-center">
         <div class="col-auto mb-2">
           <div class="d-flex">
-            <div class="card shadow rounded-3 mx-auto" style="width: 20rem;">
+            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/dragonfruit.jpg" alt="Box filled with pink dragon fruit"/>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/topsecretsaplings.jpg" alt="Saplings"/>
                   <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow mx-auto rounded-3" style="width: 16rem;">
+              <div class="card-body">
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/flower.jpg" alt="Box filled with pink dragon fruit"/>
+                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
+            </div>
+          </div>
           </div>
         </div>
         <div class="col-auto mb-2">
