Added hero text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container-fluid">
           <a class="navbar-brand" style="color: #FFFFFF;" href="index.html"><img class="w-25"/><b>🥭 Moz Fruit</b></a>
                   <ul class="navbar-nav ms-auto mt-2">
-                      <li class="nav-item"><a class="nav-link" href="about.html" style="color: #FFFFFF;">About</a></li>
+                      <!-- <li class="nav-item"><a class="nav-link" href="about.html" style="color: #FFFFFF;">About</a></li> -->
                       <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #FFFFFF;">Contact</a></li>
                   </ul>
           </div>
@@ -24,7 +24,9 @@
       <!--Hero images -->
       <img src="static/top_secret.jpeg" class="card-img-top" alt="tree with sign top secret garden">
       <div class="card-body">
-        <p class="card-text">Text about Moz Fruit - A Chigamane Estate creation</p>
+        <p class="card-text hero"><b>MozFruit - A Sustainable Oasis in the Heart of Chigamane</b></p> 
+        <p class="card-text hero">At MozFruit, we pride ourselves on sustainable and innovative farming practices, producing a bountiful harvest of dragon fruit and a diverse array of other delicious fruits and vegetables. Nestled on the Chigamane estate in Vilanculos, Mozambique, our small farm is dedicated to providing healthy and pesticide-free produce to our community and neighbouring lodges. Our commitment to education and food security extends beyond our own farm, as we work to empower our neighbours through community education and agricultural knowledge. Join us on our journey to a tastier and more sustainable future.</p> 
+        <p class="card-text hero">Visit MozFruit today!</p>
       </div>
       <div class="d-grid gap-2 col-2 mx-auto mb-2">
         <button type="button" class="btn btn-dark">Contact</btn>
