--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,26 @@
       <div class="container-fluid">
           <a class="navbar-brand" style="color: #FFFFFF;" href="index.html"><img class="w-25"/>🥭 Moz Fruit</a>
                   <ul class="navbar-nav ms-auto mt-2">
-                      <li class="nav-item"><a class="nav-link" href="about.html" style="color: #FFFFFF;">About</a></li>
+                      <!-- <li class="nav-item"><a class="nav-link" href="about.html" style="color: #FFFFFF;">About</a></li> -->
                       <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #FFFFFF;"><b>Contact</b></a></li>
                   </ul>
           </div>
       </div>
   </nav>
-    <h1>Hello, Contact Page!</h1>
-    <button type="button" class="btn btn-primary">Test bootstrap</btn>
+  <div class="container mb-5 mt-2">
+    <div class="card fluid center mx-auto w-100">
+      <!--Hero images -->
+      <img src="static/fruitilluminated.jpg" class="card-img-top" alt="tree with sign top secret garden">
+      <div class="card-body">
+        <p class="card-text hero"><b>Contact MozFruit</b></p> 
+        <p class="card-text hero">Want your kitchen table to look like ours?</p>
+        <p class="card-text hero">To get in contact email us on:  <a href="mailto:test@gmail.com" class="email-link">test@gmail.com</a></p>
+      </div>
+      <!-- <div class="d-grid gap-2 col-2 mx-auto mb-2">
+        <button type="button" class="btn btn-dark">Contact</btn>
+      </div> -->
       <Footer class="bg border-0 fixed-bottom p-3 border-0 mx-auto mt-2 w-100" style="background-color: #EDAD2C; text-align : center;">
-        <p class="text-align-center mt-2" id="pyfooter" style="text-align:center">JS INVESTIMENTOS</p>
+        <p class="text-align-center mt-2" id="mozfooter" style="text-align:center">JS INVESTIMENTOS</p>
     </Footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
