Added card text and alt-text

--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,20 @@
       </div>
   </nav>
   <div class="container mb-5 mt-2">
-    <div class="card fluid center mx-auto w-100">
+    <div class="card fluid center mx-auto w-100 pb-3">
       <!--Hero images -->
       <img src="static/fruitilluminated.jpg" class="card-img-top" alt="tree with sign top secret garden">
-      <div class="card-body">
         <p class="card-text hero"><b>Contact MozFruit</b></p> 
         <p class="card-text hero">Want your kitchen table to look like ours?</p>
-        <p class="card-text hero">To get in contact email us on:  <a href="mailto:test@gmail.com" class="email-link">test@gmail.com</a></p>
+        <p class="card-text hero">To get in contact: <a href="mailto:beelineprograms@gmail.com" class="email-link">Click Here</a></p>
       </div>
       <!-- <div class="d-grid gap-2 col-2 mx-auto mb-2">
         <button type="button" class="btn btn-dark">Contact</btn>
       </div> -->
+    </div>
+  </div>
+  </br>
+  </br>
       <Footer class="bg border-0 fixed-bottom p-3 border-0 mx-auto mt-2 w-100" style="background-color: #EDAD2C; text-align : center;">
         <p class="text-align-center mt-2" id="mozfooter" style="text-align:center">JS INVESTIMENTOS</p>
     </Footer>
