--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
     </div>
 
     <!-- Here are the images for the gallery  -->
-    <div class="card body rounded-2 shadow m-3 pt-2 ps-1 pe-1 border-1 justify-content-center mx-auto w-auto">
+    <div class="card body rounded-2 shadow m-3 pt-2 pb-3 ps-1 pe-1 border-1 justify-content-center mx-auto w-auto">
       <h2 class="card-title mx-auto">Gallery:</h5>                
       <div class="row justify-content-center">
         <div class="col-auto mb-2">
           <div class="d-flex">
             <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/topsecretsaplings.jpg" alt="Saplings"/>
-                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/topsecretsaplings.jpg" alt="Seedlings growing under a tree."/>
+                  <p class="card-title">Our saplings at MozFruit are nurtured with all-natural, pesticide-free methods, including composting and reducing food waste from the estate, resulting in healthy and delicious fruits, as you can taste.</p>
               </div>
             </div>
           </div>
@@ -51,43 +51,85 @@
           <div class="d-flex">
             <div class="card shadow mx-auto rounded-3" style="width: 16rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/flower.jpg" alt="Box filled with pink dragon fruit"/>
-                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/flower.jpg" alt="A close-up of a dragon fruit flower about to bloom."/>
+                  <p class="card-title">Dragon fruit flowers are a unique and special crop, blooming for one night only. Our team works in harmony with nature to ensure maximum yield by pollinating the flowers at the optimal time.</p>
+              </div>
             </div>
-          </div>
           </div>
         </div>
         <div class="col-auto mb-2">
           <div class="d-flex">
             <div class="card shadow mx-auto rounded-3" style="width: 16rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/flower.jpg" alt="Box filled with pink dragon fruit"/>
-                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/dragonfruitonscale.jpg" alt="Dragon fruit sitting on a scale showing the fruit weighs 632 grams."/>
+                  <p class="card-title">Our careful farming practices result in large and sweet fruits, as seen on the scale. We closely monitor sugar content and track crop progress to ensure optimal yield and soil health.</p>
+              </div>
             </div>
           </div>
-        </div>
         </div>
         <div class="col-auto mb-2">
           <div class="d-flex">
             <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/chili.jpg" alt="Box filled with pink dragon fruit"/>
-                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
-              </hr>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/rubyred.jpg" alt="Dragon fruit cut into half on plate showing bring pinkish red colouring."/>
+                  <p class="card-title">The Ruby Red dragonfruit at MozFruit boasts a vibrant red interior that is as sweet as it is visually striking. Indulge in its juicy sweetness, a taste that will linger fondly in your memory.</p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-auto mb-2">
           <div class="d-flex">
-            <div class="card shadow rounded-3 mb-3 mt-2" style="width: 16rem;">
+            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
               <div class="card-body">
-                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/litchi.jpg" alt="Box filled with pink dragon fruit"/>
-                  <p class="card-title"><b>Dragon Fruit:</b> we have many varities, including Ruby Red</p>
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/mangoscale.jpg" alt="Mango on a scale, weighing 1054 grams."/>
+                  <p class="card-title">Our team at MozFruit specializes in dragon fruit and has expertly grafted various varieties of mangoes to create a unique and delicious flavor exclusive to our farm.</p>
               </div>
             </div>
           </div>
         </div>
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
+              <div class="card-body">
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/papaya.jpg" alt="Fruit bowl filled with mangoes and papayas."/>
+                  <p class="card-title">Visit us at MozFruit and enjoy a bountiful selection of mangoes, passionfruit, papaya, and bananas, freshly picked and waiting in our fruit bowls.
+                  </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
+              <div class="card-body">
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/forneighbours.jpg" alt="A large cardboard box sits on green grass filled with passionfruit, papaya, chili, mango, and dragon fruit. "/>
+                  <p class="card-title">We believe in giving back to our community and providing special care packages to nearby lodges and local schools. We take pride in MozFruit being a good neighbour.
+                  </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
+              <div class="card-body">
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/chili.jpg" alt="A large wooden bowl filled with dried chilis. "/>
+                  <p class="card-title">Chili is a staple in Mozambican cuisine and at MozFruit, we dry and crush our chilis into powder, adding flavor and heat to dishes. Our chili bushes also attract a diverse bird population to the farm.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto mb-2">
+          <div class="d-flex">
+            <div class="card shadow rounded-3 mx-auto" style="width: 16rem;">
+              <div class="card-body">
+                <img class="img-fluid rounded-2 justify-content-center mx-auto w-auto" src="static/tomato.jpg" alt="A colourful bowl is sitting on a table, filled with small red tomatoes on the vine."/>
+                  <p class="card-title">Tomatoes are aplenty at MozFruit, not just in our cultivated gardens but also growing wild on trees. A result of birds helping themselves to our first harvest, now available for everyone to enjoy.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      
     </div>
     </div>
   </div>  
