Updated nav bar

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="bg navbar navbar-expand-md border-0" style="background-color: #EDAD2C;">
+    <nav class="bg navbar navbar-expand-md border-0" style="background-color: #E8D2A6;">
       <div class="container-fluid">
           <a class="navbar-brand" style="color: #FFFFFF;" href="index.html"><img class="w-25"/><b>🥭 Moz Fruit</b></a>
                   <ul class="navbar-nav ms-auto mt-2">
                       <!-- <li class="nav-item"><a class="nav-link" href="about.html" style="color: #FFFFFF;">About</a></li> -->
-                      <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #FFFFFF;">Contact</a></li>
+                      <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #FFFFFF;">Contact 🇲🇿</a></li>
                   </ul>
           </div>
       </div>
@@ -28,9 +28,10 @@
         <p class="card-text hero">At MozFruit, we pride ourselves on sustainable and innovative farming practices, producing a bountiful harvest of dragon fruit and a diverse array of other delicious fruits and vegetables. Nestled on the Chigamane estate in Vilanculos, Mozambique, our small farm is dedicated to providing healthy and pesticide-free produce to our community and neighbouring lodges. Our commitment to education and food security extends beyond our own farm, as we work to empower our neighbours through community education and agricultural knowledge. Join us on our journey to a tastier and more sustainable future.</p> 
         <p class="card-text hero">Visit MozFruit today!</p>
       </div>
-      <div class="d-grid gap-2 col-2 mx-auto mb-2">
-        <button type="button" class="btn btn-dark">Contact</btn>
-      </div>
+      <div class="d-grid gap-2 col-2 mx-auto mb-3">
+        <!-- <button type="button" class="btn btn-dark" id="contact-button"><a href="contact.html">Contact</a></btn> -->
+          <a href="contact.html" class="btn btn-dark" tabindex="-1" role="button" aria-disabled="false">Contact</a>
+        </div>
     </div>
 
     <!-- Here are the images for the gallery  -->
@@ -140,7 +141,7 @@
 </br>
 </br>
 </br>
-      <Footer class="bg border-0 fixed-bottom p-3 border-0 mx-auto mt-2 w-100" style="background-color: #EDAD2C; text-align : center;">
+      <Footer class="bg border-0 fixed-bottom p-3 border-0 mx-auto mt-2 w-100" style="background-color: #E8D2A6; text-align : center;">
         <p class="text-align-center mt-2" id="mozfooter" style="text-align:center">JS INVESTIMENTOS</p>
     </Footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
