--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="bg navbar navbar-expand-md border-0" style="background-color: #EDAD2C;">
+    <nav class="bg navbar navbar-expand-md border-0" style="background-color: #E8D2A6;">
       <div class="container-fluid">
           <a class="navbar-brand" style="color: #FFFFFF;" href="index.html"><img class="w-25"/>🥭 Moz Fruit</a>
                   <ul class="navbar-nav ms-auto mt-2">
                       <!-- <li class="nav-item"><a class="nav-link" href="about.html" style="color: #FFFFFF;">About</a></li> -->
-                      <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #FFFFFF;"><b>Contact</b></a></li>
+                      <li class="nav-item"><a class="nav-link" href="contact.html" style="color: #FFFFFF;"><b>Contact 🇲🇿</b></a></li>
                   </ul>
           </div>
       </div>
@@ -34,7 +34,7 @@
   </div>
   </br>
   </br>
-      <Footer class="bg border-0 fixed-bottom p-3 border-0 mx-auto mt-2 w-100" style="background-color: #EDAD2C; text-align : center;">
+      <Footer class="bg border-0 fixed-bottom p-3 border-0 mx-auto mt-2 w-100" style="background-color: #E8D2A6; text-align : center;">
         <p class="text-align-center mt-2" id="mozfooter" style="text-align:center">JS INVESTIMENTOS</p>
     </Footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
